# MergeVideo

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  concat.cpp  finetune.cpp  native-lib.cpp
app/src/main/java/com/example/myapplication/: EditActivity.java  MainActivity.java  MergeActivity.java
app/src/main/java/com/example/myapplication/jni/: ConcatUtils.java  FFmpegCmd.java  FineCutObj.java  FineResult.java  FinetuneUtils.java
app/src/main/java/com/example/myapplication/utils/: Decompress.java  EditItem.java  EditItemAdapter.java  FullyGridLayoutManager.java  GlideEngine.java  TermuxUtils.java
app/src/main/java/com/example/myapplication/utils/adapter/: GridImageAdapter.java
app/src/main/java/com/example/myapplication/utils/album/: FullyGridLayoutManager.java  GlideEngine.java
app/src/main/java/com/example/myapplication/utils/album/adapter/: GridImageAdapter.java
app/src/main/java/com/example/myapplication/utils/album/listener/: DragListener.java  OnItemLongClickListener.java
app/src/main/java/com/example/myapplication/utils/edit/: EditBlock.java  EditBlockAdapter.java  EditItem.java  EditItemAdapter.java
app/src/main/java/com/example/myapplication/utils/edititem/: EditItem.java  EditItemAdapter.java  SelectVideos.java
app/src/main/java/com/example/myapplication/utils/listener/: DragListener.java  OnItemLongClickListener.java
app/src/main/java/com/example/myapplication/utils/tools/: ClearCache.java  Constants.java  CopyFile.java  CutVideo.java  Decompress.java  FFmepgUtils.java  FFmpegUtils.java  MergeVideo.java  MusicInfo.java  SelectVideos.java  Theme.java  VideoInfo.java
app/src/main/java/com/example/myapplication/utils/tools/deprecatedVideoTools/: CutVideo.java  MergeVideo.java
app/src/main/res/drawable/: video_outline.xml
app/src/main/res/layout/: activity_edit.xml  activity_main.xml  activity_merge.xml  content_scrolling.xml  edit_block.xml  edit_item.xml  gv_filter_image.xml
app/src/main/res/menu/: menu_edit.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
